--- a/client/views/static/signup.html
+++ b/client/views/static/signup.html
@@ -12,7 +12,7 @@
                         <form>
                             <input type="text" name="username" placeholder="Имя пользователя" id="signup-username">
                             <input type="text" name="fullName" placeholder="Полное имя" id="signup-fullName">
-                            <input type="text" name="organization" placeholder="Организация" id="signup-organization">
+                            <input type="text" name="organization" placeholder="Организация/Университет" id="signup-organization">
                             <input type="email" name="email" placeholder="Email" id="signup-email">
                             <input type="text" name="phone" placeholder="Телефон" id="signup-phone">
                             <input type="password" name="password" placeholder="Выберите пароль" id="signup-pass">
