--- a/client/views/user/user_home.html
+++ b/client/views/user/user_home.html
@@ -1,6 +1,5 @@
 <template name="userHome">
 
-    <div class="content">
-        dqwdqdqwdq
-    </div>
+    <!--<div class="content" style="padding: 20px">
+    </div>-->
 </template>
