--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -1,5 +1,6 @@
 html{
     font-family: 'Open Sans', sans-serif;
+    overflow: hidden;
 }
 .content {
     position: absolute;
@@ -97,4 +98,7 @@ display: block;
     width: 100%;
     max-height: 80%;
     cursor: pointer;
+}
+.padding-20{
+    padding: 20px;
 }
