Add pages, multiple collections and some packages for future work

--- a/client/views/static/main.html
+++ b/client/views/static/main.html
@@ -1,5 +1,5 @@
 <template name="staticMain">
-        <div class="content" id="main-content">
+        <div class="my-content" id="main-content">
             <div class="pane-left table">
                 <div class="middle">
                     <div class="inner" style="width: 80%">
