--- a/client/views/static/signup.html
+++ b/client/views/static/signup.html
@@ -17,7 +17,7 @@
                             <input type="text" name="phone" placeholder="Телефон" id="signup-phone">
                             <input type="password" name="password" placeholder="Выберите пароль" id="signup-pass">
                             <input type="password" name="password2" placeholder="Повторите пароль" id="signup-pass2">
-                            <button type="submit" class="button">Зарегистрироваться</button>
+                            <button type="submit" class="my-button">Зарегистрироваться</button>
                         </form>
                     </div>
                 </div>
