--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -1,8 +1,13 @@
 html{
     font-family: 'Open Sans', sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
 }
-.content {
+.red-rect{
+    width: 50px;
+    height: 50px;
+    background: #95a5a6;
+}
+.my-content {
     position: absolute;
     top: 0px;
     right: 0px;
@@ -57,7 +62,8 @@ display: block;
 .signup-form form button{
     width: 200px;
 }
-.button{
+.my-button{
+    margin-bottom: 10px;
     cursor: pointer;
     width: 200px;
     height: 40px;
@@ -101,4 +107,10 @@ display: block;
 }
 .padding-20{
     padding: 20px;
+}
+.dropdown{
+    min-width: 210px;
+}
+.content{
+    max-width: 93% !important;
 }
