--- a/client/views/layouts/main_layout.html
+++ b/client/views/layouts/main_layout.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
+    <script src="/js/particles.min.js"></script>
 </head>
 <template name="mainLayout">
     {{> yield region="content"}}
