--- a/client/views/partials/login_form.html
+++ b/client/views/partials/login_form.html
@@ -7,7 +7,8 @@
         <form>
             <input type="email" name="email" placeholder="Email address" id="login-email">
             <input type="password" name="password" placeholder="Password" id="login-pass">
-            <button type="submit" class="button">Войти</button>
+            <button id="login-button" type="submit" class="my-button">Войти</button> <br>
+            <button id="test-user" type="button" class="my-button">Войти как тестовый пользователь</button>
         </form>
         <div class="text-center">
             <a class="f-s-12" href="{{pathFor 'signup'}}">Зарегистрироваться</a>
