--- a/client/stylesheets/utils.css
+++ b/client/stylesheets/utils.css
@@ -1,3 +1,20 @@
 .m-t-20{
     margin-top: 20px !important;
 }
+.m-b-0{
+    margin-bottom: 0 !important;
+}
+.m-t-0{
+    margin-top: 0 !important;
+}
+.no-bottom-border-radius{
+    border-bottom-left-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+}
+.no-top-border-radius{
+    border-top-left-radius: 0 !important;
+    border-top-right-radius: 0 !important;
+}
+.events-all{
+    pointer-events: all !important;
+}
