--- a/client/views/user/user_update.html
+++ b/client/views/user/user_update.html
@@ -1,9 +1,34 @@
 <template name="userUpdate">
-    Ваша организация: <br>
+    <!--Ваша организация: <br>
     {{#each organizations}}
         {{name}}
-    {{/each}}
-    <br>
+    {{/each}}-->
+    Редактировать:
+    <div class="ui divider"></div>
+    <div class="ui inverted menu no-bottom-border-radius m-b-0">
+        <a href="{{pathFor 'user' controller='update' model='objects'}}" class="{{#if isUserListObjects}}active{{/if}} item">
+            <i class="building icon"></i> Объекты
+        </a>
+        <a href="{{pathFor 'user' controller='update' model='auditories'}}" class="{{#if isUserListAuditories}}active{{/if}} item">
+            <i class="student icon"></i> Аудитории
+        </a>
+        <a  href="{{pathFor 'user' controller='update' model='groups'}}" class="{{#if isUserListGroups}}active{{/if}} item">
+            <i class="group icon"></i> Группы
+        </a>
+    </div>
+    <div class="ui top segment no-top-border-radius m-t-0">
+
+        {{#if isUserListObjects}}{{> userListObjects}}{{/if}}
+        {{#if isUserListAuditories}}{{> userListAuditories}}{{/if}}
+        {{#if isUserListGroups}}{{> userListGroups}}{{/if}}
+        {{#if isUserListFaculties}}{{> userListFaculties}}{{/if}}
+        {{#if isUserUpdateObjects}}{{> userUpdateObjects}}{{/if}}
+        {{#if isUserUpdateAuditories}}{{> userUpdateAuditories}}{{/if}}
+        {{#if isUserUpdateGroups}}{{> userUpdateGroups}}{{/if}}
+        {{#if isUserUpdateFaculties}}{{> userUpdateFaculties}}{{/if}}
+
+    </div>
+    <!--<br>
     <div>
         {{#if objects}}
             Выберите объект для редактирования: <br>
@@ -21,5 +46,8 @@
         <i class="plus icon"></i>
         Добавить объект
     </div>
-    {{> addObjectModal}}
+    {{> addObjectModal}}-->
+    <div>
+
+    </div>
 </template>
