--- a/client/views/user/update/user_update_groups.html
+++ b/client/views/user/update/user_update_groups.html
@@ -1,3 +1,77 @@
 <template name="userUpdateGroups">
-
+    <div class="text-center">
+        <div class="update-form full-width margin-auto">
+            <h3 class="m-b-0"> Редактирование группы </h3><br>
+            <input id="groupId" type="hidden" value="{{group._id}}">
+            <div class="ui horizontal divider">
+                <i class="group  icon"></i>
+            </div>
+            <div class="ui labeled input full-width">
+                <div class="ui teal label">
+                    Факультет
+                </div>
+                <select id="faculties-dropdown" class="ui labeled dropdown full-width height-41 no-left-border-radius">
+                    <!--<option value="">{{group.facultyName}}</option>-->
+                    {{#each faculties}}
+                        {{#if selected}}
+                            <option value="{{name}}" selected>{{name}}</option>
+                        {{else}}
+                            <option value="{{name}}">{{name}}</option>
+                        {{/if}}
+                        <input id="faculty_{{name}}" type="hidden" value="{{name}}-{{_id}}">
+                    {{/each}}
+                </select>
+            </div>
+            <div class="ui divider"></div>
+            <div class="ui labeled input full-width">
+                <div class="ui teal label">
+                    Название
+                </div>
+                <input id="group-name" type="text" value="{{group.name}}">
+            </div>
+            <div class="ui divider"></div>
+            <div class="ui labeled input full-width">
+                <div class="ui teal label">
+                    Курс
+                </div>
+                <input id="group-year" type="text" value="{{group.year}}">
+            </div>
+            <div class="ui divider"></div>
+            <div class="ui labeled input full-width">
+                <div class="ui teal label">
+                    Количество студентов
+                </div>
+                <input id="group-students" type="text" value="{{group.studentsCount}}">
+            </div>
+            <div class="ui divider"></div>
+            <div class="ui labeled input full-width">
+                <div class="ui teal label">
+                    Контактный телефон
+                </div>
+                <input id="group-phone" type="text" value="{{group.contacts.phone}}">
+            </div>
+            <div class="ui horizontal divider">
+                <i class="angle down icon"></i>
+            </div>
+            <div id="error-message" class="ui icon error hidden message">
+                <i class="attention circle icon"></i>
+                <div class="content">
+                    <div class="header">Ошибка</div>
+                    <p>Проверьте введенные вами данные</p>
+                </div>
+            </div>
+            <div id="success-message" class="ui success hidden message">
+                <i class="close icon"></i>
+                <div class="header">
+                    Изменения успешно сохранены.
+                </div>
+                <p></p>
+            </div>
+            <div class="ui buttons">
+                <div id="cancelButton" class="ui black button">Отмена</div>
+                <div class="or" data-text=" "></div>
+                <div id="saveButton" class="ui teal button">Сохранить</div>
+            </div>
+        </div>
+    </div>
 </template>
