--- a/client/views/user/user_update.html
+++ b/client/views/user/user_update.html
@@ -3,8 +3,8 @@
     {{#each organizations}}
         {{name}}
     {{/each}}-->
-    Редактировать:
-    <div class="ui divider"></div>
+    <!--Редактировать:
+    <div class="ui divider"></div>-->
     <div class="ui inverted menu no-bottom-border-radius m-b-0">
         <a href="{{pathFor 'user' controller='update' model='objects'}}" class="{{#if isUserListObjects}}active{{/if}} item">
             <i class="building icon"></i> Объекты
@@ -12,7 +12,7 @@
         <a href="{{pathFor 'user' controller='update' model='auditories'}}" class="{{#if isUserListAuditories}}active{{/if}} item">
             <i class="student icon"></i> Аудитории
         </a>
-        <a  href="{{pathFor 'user' controller='update' model='groups'}}" class="{{#if isUserListGroups}}active{{/if}} item">
+        <a  href="{{pathFor 'user' controller='update' model='groups'}}" class="{{#if isUserWorkGroups}}active{{/if}} item">
             <i class="group icon"></i> Группы
         </a>
     </div>
