--- a/client/views/user/list/user_list_groups.html
+++ b/client/views/user/list/user_list_groups.html
@@ -1,54 +1,55 @@
 <template name="userListGroups">
     <table class="ui compact celled definition table">
         <thead>
-        <tr>
-            <th class="events-all">
-                <select id="faculties-dropdown" class="ui search dropdown">
-                    {{#each faculties}}
-                        <option value="{{name}}">{{name}}</option>
-                    {{/each}}
-                </select>
-            </th>
-            <th>Название</th>
-            <th>Кол-во студентов</th>
-            <th>Курс</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        {{#each groups}}
-        <tr>
-            <td class="collapsing">
-                <div class="ui fitted slider checkbox">
-                    <input type="checkbox"> <label></label>
-                </div>
-            </td>
-            <td>{{name}}</td>
-            <td>{{studentsCount}}</td>
-            <td>{{year}}</td>
-            <td>
-                <a href="{{pathFor 'user' controller='update' model='groups' id=this._id }}" class="ui button">
-                    Редактировать
-                </a>
-            </td>
-        </tr>
-        {{/each}}
+            <tr>
+                <th class="events-all">
+                    <select id="faculties-dropdown" class="ui search dropdown">
+                        {{#each faculties}}
+                            <option value="{{name}}">{{name}}</option>
+                        {{/each}}
+                    </select>
+                </th>
+                <th>Название</th>
+                <th>Кол-во студентов</th>
+                <th>Курс</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#each groups}}
+            <tr>
+                <td class="collapsing">
+                    <div class="ui fitted toggle checkbox float-right">
+                        <input id="checkbox_{{_id}}" type="checkbox"><label></label>
+                        <input id="group_{{_id}}" type="hidden" value="{{_id}}">
+                    </div>
+                </td>
+                <td>{{name}}</td>
+                <td>{{studentsCount}}</td>
+                <td>{{year}}</td>
+                <td>
+                    <a href="{{pathFor 'user' controller='update' model='groups' id=this._id }}" class="ui button">
+                        Редактировать
+                    </a>
+                </td>
+            </tr>
+            {{/each}}
         </tbody>
         <tfoot class="full-width">
-        <tr>
-            <th></th>
-            <th colspan="4">
-                <div id="addButton" class="ui right floated small primary labeled icon button">
-                    <i class="plus icon"></i> Добавить группу
-                </div>
-                <div class="ui small button">
-                    Удалить
-                </div>
-                <div class="ui small red disabled button">
-                    Удалить все
-                </div>
-            </th>
-        </tr>
+            <tr>
+                <th></th>
+                <th colspan="4">
+                    <div id="addButton" class="ui right floated small primary labeled icon button">
+                        <i class="plus icon"></i> Добавить группу
+                    </div>
+                    <div id="deleteSelected" class="ui small {{#if noChecked}}disabled{{/if}} button">
+                        Удалить выбранные
+                    </div>
+                    <div class="ui small red disabled button">
+                        Удалить все
+                    </div>
+                </th>
+            </tr>
         </tfoot>
     </table>
 </template>
