--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -33,7 +33,7 @@ html{
     text-align: center;
 }
 .login-form form input{
-display: block;
+    display: block;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
@@ -127,4 +127,13 @@ display: block;
 .update-form .message {
     width: auto !important;
     text-align: left;
+}
+#login-button, #test-user{
+
+    min-width: 250px !important;
+    max-width: 250px !important;
+    width: 250px !important;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
 }
