courses edition and minor changes

--- a/client/views/layouts/user_layout.html
+++ b/client/views/layouts/user_layout.html
@@ -1,5 +1,5 @@
 <template name="userLayout">
-
+    <input type="hidden" id="organizationId" value="{{organization._id}}">
     <div class="padding-20">
 
         <div class="ui secondary pointing menu">
