--- a/client/views/user/update/user_update_groups.html
+++ b/client/views/user/update/user_update_groups.html
@@ -1,17 +1,21 @@
 <template name="userUpdateGroups">
     <div class="text-center">
         <div class="update-form full-width margin-auto">
+            <!-- Header -->
             <h3 class="m-b-0"> Редактирование группы </h3><br>
             <input id="groupId" type="hidden" value="{{group._id}}">
+
             <div class="ui horizontal divider">
                 <i class="group  icon"></i>
             </div>
+            <!-- Header -->
+
+            <!-- Content -->
             <div class="ui labeled input full-width">
                 <div class="ui teal label">
                     Факультет
                 </div>
                 <select id="faculties-dropdown" class="ui labeled dropdown full-width height-41 no-left-border-radius">
-                    <!--<option value="">{{group.facultyName}}</option>-->
                     {{#each faculties}}
                         {{#if selected}}
                             <option value="{{name}}" selected>{{name}}</option>
@@ -22,37 +26,49 @@
                     {{/each}}
                 </select>
             </div>
+
             <div class="ui divider"></div>
+
             <div class="ui labeled input full-width">
                 <div class="ui teal label">
                     Название
                 </div>
                 <input id="group-name" type="text" value="{{group.name}}">
             </div>
+
             <div class="ui divider"></div>
+
             <div class="ui labeled input full-width">
                 <div class="ui teal label">
                     Курс
                 </div>
                 <input id="group-year" type="text" value="{{group.year}}">
             </div>
+
             <div class="ui divider"></div>
+
             <div class="ui labeled input full-width">
                 <div class="ui teal label">
                     Количество студентов
                 </div>
                 <input id="group-students" type="text" value="{{group.studentsCount}}">
             </div>
+
             <div class="ui divider"></div>
+
             <div class="ui labeled input full-width">
                 <div class="ui teal label">
                     Контактный телефон
                 </div>
                 <input id="group-phone" type="text" value="{{group.contacts.phone}}">
             </div>
+
             <div class="ui horizontal divider">
                 <i class="angle down icon"></i>
             </div>
+            <!-- Content -->
+
+            <!-- Messages -->
             <div id="error-message" class="ui icon error hidden message">
                 <i class="attention circle icon"></i>
                 <div class="content">
@@ -65,13 +81,15 @@
                 <div class="header">
                     Изменения успешно сохранены.
                 </div>
-                <p></p>
             </div>
+            <!-- Messages -->
+
             <div class="ui buttons">
                 <div id="cancelButton" class="ui black button">Отмена</div>
                 <div class="or" data-text=" "></div>
                 <div id="saveButton" class="ui teal button">Сохранить</div>
             </div>
-        </div>
+
+        </div> <!-- End update form -->
     </div>
 </template>
